k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: davor-namespace
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 31021
  selector:
    app: frontend-app
